--- a/blog/blog-backend/.eslintrc.json
+++ b/blog/blog-backend/.eslintrc.json
@@ -10,7 +10,8 @@
         "ShareArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2018,
+        "sourceType": "module"
     },
     "rules": {
         "no-unused-vars": "warn",
