--- a/blog/blog-backend/package.json
+++ b/blog/blog-backend/package.json
@@ -11,7 +11,7 @@
     "nodemon": "^1.18.11"
   },
   "scripts": {
-    "start": "node src",
-    "start:dev": "nodemon --watch src/ src/ index.js"
+    "start": "node -r esm src",
+    "start:dev": "nodemon --watch src/ -r esm src/ index.js"
   }
 }
